[gd_scene load_steps=2 format=3 uid="uid://d1jr4tbbrr4yu"]

[ext_resource type="Script" path="res://nodes/Game/blende_new_day.gd" id="1_8o6kl"]

[node name="blende_new_day" type="Node2D"]
script = ExtResource("1_8o6kl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1024.0
offset_bottom = 768.0
color = Color(0.439216, 0.439216, 0.439216, 1)
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="."]
offset_right = 1024.0
offset_bottom = 768.0
theme_override_font_sizes/font_size = 50
text = "Ein neuer Tag
und ein"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="AnzeigenDauer" type="Timer" parent="."]
one_shot = true

[node name="StartDelay" type="Timer" parent="."]
wait_time = 0.595

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AnzeigenDauer" to="." method="_on_anzeigen_dauer_timeout"]
[connection signal="timeout" from="StartDelay" to="." method="_on_start_delay_timeout"]
